# java-updater-rs

./: .gitattributes  .justfile  .rustfmt.toml  AGENTS.md  Cargo.toml  Cross.toml  README.md  build.rs  readme.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release-lite.yml  release.yml
src/: args.rs  checksum.rs  colors.rs  config.rs  main.rs  meta.rs  notify.rs  package.rs  terminal.rs  util.rs  vars.rs  vendor.rs  version.rs
src/azul/: api.rs  installation.rs  mod.rs
src/eclipse/: api.rs  installation.rs  mod.rs
tests/: java-updater-linux.yml  java-updater-windows.yml
