[package]
authors = ["Marco Lehmann-Mörz"]
categories = ["command-line-utilities", "update"]
description = "A command-line program to keep a bunch of java installations up to date"
edition = "2021"
keywords = ["update"]
license = "MIT OR Apache-2.0"
name = "java-updater"
publish = false
readme = "readme.md"
repository = "https://github.com/mlehmannm/java-updater-rs.git"
rust-version = "1.79.0"
version = "0.3.0-dev"

[[bin]]
name = "java-updater"
path = "src/main.rs"

[features]
default = ["azul", "eclipse", "notify"]
azul = []
eclipse = []
notify = []

[dependencies]
anyhow = "1"
base16ct = { version = "0.2", features = ["alloc"] }
clap = { version = "4.5", default-features = false, features = [
    "cargo",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "usage",
    "wrap_help",
] }
env_logger = "0.11"
humantime = "2.1"
log = { version = "0.4", features = ["release_max_level_trace"] }
nu-ansi-term = "0.50"
reqwest = { version = "0.12", features = ["blocking"] }
semver = { version = "1.0", features = ["serde"] }
# avoid pre-compiled binaries, see https://github.com/serde-rs/serde/issues/2538 and https://github.com/serde-rs/serde/pull/2590
serde = { version = ">=1.0.185", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shellexpand = "3.1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.0.35"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
zip = "2.2"

[build-dependencies]
vergen-git2 = { version = "1.0", features = ["build", "emit_and_set", "rustc"] }

[target.'cfg(windows)'.build-dependencies]
windows-registry = "0.3"
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.14"
test-log = "0.2"

[profile.release]
# borrowed partially from https://github.com/denoland/deno/blob/main/Cargo.toml
codegen-units = 1
lto = true
opt-level = 'z'   # optimize for size
strip = true

[package.metadata.winres]
FileDescription = "Java Updater"
LegalCopyright = "Copyright © 2024 Marco Lehmann-Mörz"
OriginalFilename = "java-updater.exe"

[lints.clippy] # uncomment from time to time and run `just clippy`
# cargo = { priority = -1, level = "deny" }
# complexity = { priority = -1, level = "deny" }
# correctness = { priority = -1, level = "deny" }
# nursery = { priority = -1, level = "deny" }
# pedantic = { priority = -1, level = "deny" }
# perf = { priority = -1, level = "deny" }
# restriction = { priority = -1, level = "deny" }
# style = { priority = -1, level = "deny" }
# suspicious = { priority = -1, level = "deny" }
